added: api get all products
